--- a/cmd/ordersystem/.env
+++ b/cmd/ordersystem/.env
@@ -7,5 +7,7 @@ DB_NAME=orders
 WEB_SERVER_PORT=:8000
 GRPC_SERVER_PORT=50051
 GRAPHQL_SERVER_PORT=8080
-
-
+AMQP_HOST=localhost
+AMQP_PORT=5672
+AMQP_USER=guest
+AMQP_PASSWORD=guest
