--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,17 +2,35 @@ version: '3'
 
 services:
   mysql:
-    image: mysql:5.7
+    image: mysql
     container_name: mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: orders
+      MYSQL_DATABASE: cleanarch
       MYSQL_PASSWORD: root
     ports:
       - 3306:3306
+    healthcheck:
+      test: ["CMD", "mysql", "-u", "root", "-proot", "--execute", "SHOW DATABASES;"]
+      start_period: 30s
+      interval: 30s
+      timeout: 30s
+      retries: 3
+    networks: 
+      - new
+
+  migrate:
+    image: migrate/migrate
     volumes:
-      - .docker/mysql:/var/lib/mysql
+      - ./internal/infra/database/sql/migrations:/migrations
+    command: -path=/migrations -database "mysql://root:root@tcp(mysql:3306)/cleanarch" -verbose up
+    depends_on:
+      mysql:
+        condition: service_healthy
+    networks: 
+      - new
+  
 
   rabbitmq:
     image: rabbitmq:3-management
@@ -24,3 +42,41 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      start_period: 30s
+      interval: 10s
+      timeout: 30s
+      retries: 3
+    depends_on:
+      mysql:
+        condition: service_healthy
+      migrate:
+        condition: service_started
+    networks: 
+      - new
+
+  server:
+    build: .
+    container_name: server
+    restart: always
+    ports:
+      - 8080:8080
+      - 8000:8000
+      - 50051:50051
+    environment:
+      DB_HOST: mysql
+      AMQP_HOST: rabbitmq
+      DB_NAME: cleanarch
+    depends_on:
+      mysql:
+        condition: service_healthy
+      migrate:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+    networks: 
+      - new
+
+networks:
+  new:
